--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "start": "vite",
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
-     "start": "node server.js"
+    "preview": "vite preview"
   },
   "devDependencies": {
     "vite": "^4.1.0"
