--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "t",
-  "private": true,
+  "private": true,    
   "version": "0.0.0",
-  "type": "module",
+  "type": "application/javascript",
   "scripts": {
     "start": "vite",
     "dev": "vite",
