--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "t",
   "private": true,    
   "version": "0.0.0",
-  "type": "application/javascript",
+  "type": "module",
   "scripts": {
     "start": "vite",
     "dev": "vite",
