--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "t",
-  "private": true,    
+  "name": "portfolio",
+  "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
